# tree-sitter-qsharp

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-qsharp.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_qsharp/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQsharp/: qsharp.h
bindings/swift/TreeSitterQsharpTests/: TreeSitterQsharpTests.swift
examples/: showcase.qs
queries/: folds.scm  highlights.scm  indents.scm  locals.scm  tags.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: control_flow.txt  declarations.txt  edge_cases.txt  expressions.txt  imports.txt  literals.txt  operators.txt  quantum.txt  statements.txt  structs.txt  types.txt
